# twamp-light

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README  README.md
cmake/: getversion.cmake
debian/: control.txt  make-deb-pkg.sh  readme.md
include/: CLI11.hpp  Client.h  Counter.h  Server.h  TimeSync.h  packetlist.h  packets.h  twamp_light.h  twamp_light.hpp  utils.hpp
jenkins/: jenkinsfile
src/: TimeSync.cpp  client.cpp  main_client.cpp  server.cpp  utils.cpp
src/client/: Client.cpp  main_client.cpp
src/server/: Server.cpp  main_server.cpp
systemd/: twamp-light-server.service
tests/: test.sh  test_ipv6.sh  valgrind_test.sh  valgrind_test_ipv6.sh
